--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --text-primary: #092324;
+  --text-hover-primary: #3f797c;
+  --text-secondary: #f0e6d9;
+  --text-hover-secondary: #efdabdb0;
+  --background: #fbfefe;
+  --primary: #591b17;
+  --secondary: #efdabd;
+  --accent: #b22d67;
+  --hover-accent: #cc3476;
+}
+
+.dark :root {
+  --text-primary: #fbfefe;
+  --text-hover-primary: #bcbebe;
+  --text-secondary: #efdabd;
+  --text-hover-secondary: #efdabdb0;
+  --background: #092324;
+  --primary: #591b17;
+  --secondary: #100b04;
+  --accent: #e494b7;
+  --hover-accent: #ce7c9f;
+}
