--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -9,19 +9,23 @@
   --text-hover-secondary: #efdabdb0;
   --background: #fbfefe;
   --primary: #591b17;
+  --hover-primary: #6e231d;
   --secondary: #efdabd;
+  --hover-secondary: #dfbf96;
   --accent: #b22d67;
   --hover-accent: #cc3476;
 }
 
-.dark :root {
+:root .dark {
   --text-primary: #fbfefe;
   --text-hover-primary: #bcbebe;
   --text-secondary: #efdabd;
   --text-hover-secondary: #efdabdb0;
   --background: #092324;
   --primary: #591b17;
-  --secondary: #100b04;
+  --hover-primary: #6e231d;
+  --secondary: #221e1d;
+  --hover-secondary: #332e2d;
   --accent: #e494b7;
   --hover-accent: #ce7c9f;
 }
